--- a/index.html
+++ b/index.html
@@ -7,22 +7,24 @@
     <script src="https://cdn.tailwindcss.com"></script>
   </head>
   <body
+    onload="cur()"
     class="bg-gray-900 text-white flex items-center justify-center min-h-screen"
   >
-    <div  id="midBody" class="bg-gray-800 p-8 rounded-2xl shadow-lg w-full max-w-md">
+    <div
+      id="midBody"
+      class="bg-gray-800 p-8 rounded-2xl shadow-lg w-full max-w-md"
+    >
       <h2 class="text-2xl font-bold text-center mb-6 text-green-400">
-        Currency Converter
+        $$ Converter
       </h2>
 
-     
       <div class="flex items-center justify-between mb-4">
         <select
           id="allCurrency"
           class="w-[45%] p-3 rounded-md bg-gray-700 text-white border border-gray-600"
-        >
-        </select>
+        ></select>
       </div>
- <input
+      <input
         type="number"
         id="amount"
         placeholder="Enter amount"
